fixed alignment of cast pics and yt videos

--- a/css/styles.css
+++ b/css/styles.css
@@ -206,10 +206,15 @@ h1 {
     width: 100%;
     height: auto;
     margin-left: 25px;
+    display: flex;
+    justify-content: center;
 }
 
 .castpic {
     width: 45%;
+    height: 315px;
+    align-self: baseline;
+    margin-right: 20px;
 }
 
 .themevid {
